--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -18,5 +18,8 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Check internal links
+        run: yarn run remark --quiet --frail ./docs
       - name: Test build website
         run: yarn build
+      
