--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark-cli": "^11.0.0",
+    "remark-lint": "^9.1.1",
+    "remark-lint-no-dead-urls": "^1.1.0",
     "remark-validate-links": "^12.1.0"
   },
   "devDependencies": {
