--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "remark-cli": "^11.0.0",
     "remark-lint": "^9.1.1",
     "remark-lint-no-dead-urls": "^1.1.0",
-    "remark-validate-links": "^12.1.0"
+    "remark-validate-links": "^12.1.0",
+    "remark-validate-links-heading-id": "^0.0.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.2.0"
@@ -43,6 +44,7 @@
   },
   "remarkConfig": {
     "plugins": [
+      "remark-validate-links-heading-id",
       "remark-validate-links"
     ]
   }
