--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/plugin-client-redirects": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@docusaurus/theme-mermaid": "^2.4.1",
-    "@easyops-cn/docusaurus-search-local": "^0.35.0",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "^3.0.0",
+    "@docusaurus/plugin-client-redirects": "^3.0.0",
+    "@docusaurus/preset-classic": "^3.0.0",
+    "@docusaurus/theme-common": "^3.0.0",
+    "@docusaurus/theme-mermaid": "^3.0.0",
+    "@easyops-cn/docusaurus-search-local": "^0.37.4",
+    "@mdx-js/react": "3.0.0",
     "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remark-cli": "^11.0.0",
-    "remark-lint": "^9.1.1",
+    "prism-react-renderer": "^2.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0",
+    "remark-cli": "^12.0.0",
+    "remark-lint": "^9.1.2",
     "remark-lint-no-dead-urls": "^1.1.0",
-    "remark-validate-links": "^12.1.0",
+    "remark-validate-links": "^13.0.0",
     "remark-validate-links-heading-id": "^0.0.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.1"
+    "@docusaurus/module-type-aliases": "^3.0.0"
   },
   "browserslist": {
     "production": [
