--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,7 +1,8 @@
 name: Collect Release Notes
 on:
-  workflow_dispatch
-
+  workflow_dispatch: {}
+  schedule:
+    - cron: '0 6 * * 1' # every Monday at 6:00 AM
 env:
   MINORS: "v1.27 v1.28 v1.29 v1.30"
 permissions:
@@ -24,11 +25,12 @@ jobs:
         run: scripts/collect-all-release-notes.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install codespell and run spell check
+      - name: Install codespell
         run: |
           python -m pip install --upgrade pip
           pip install codespell
-          codespell
+      - name: Run codespell
+        run: codespell
       - name: Get current month and year
         id: date
         run: echo "::set-output name=month_year::$(date +'%B %Y')"
