Only run release-notes PR automatically on k3s-io
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -10,6 +10,7 @@ permissions:
   pull-requests: write
 jobs:
   collect-all:
+    if: github.repository == 'k3s-io/docs'
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
