--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -34,9 +34,9 @@ jobs:
         run: codespell
       - name: Get current month and year
         id: date
-        run: echo "::set-output name=month_year::$(date +'%B %Y')"
+        run: echo "month_year=$(date +'%B %Y')" >> $GITHUB_ENV
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v7
         with:
           commit-message: update release-notes/k3s-*.md
           title: Update Release Notes ${{ steps.date.outputs.month_year }}
