--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^18.3.1",
     "remark-cli": "^12.0.1",
     "remark-lint": "^10.0.0",
-    "remark-lint-no-dead-urls": "^2.0.0",
+    "remark-lint-no-dead-urls": "^2.0.1",
     "remark-validate-links": "^13.0.1",
     "remark-validate-links-heading-id": "^0.0.3"
   },
@@ -49,7 +49,19 @@
   "remarkConfig": {
     "plugins": [
       "remark-validate-links-heading-id",
-      "remark-validate-links"
+      "remark-validate-links",
+      [
+        "remark-lint-no-dead-urls",
+        {
+          "skipUrlPatterns": [
+            "^https://www\\.mysql\\.com",
+            "^https://dev\\.mysql\\.com\\.*",
+            "^https://k3d\\.io\\.*",
+            "^https://github\\.com/k3s-io/k3s/blob/master/pkg/daemons/config/types\\.go",
+            "^https://github\\.com/rancher/local-path-provisioner/blob/master/README\\.md"
+          ]
+        }
+      ]
     ]
   }
 }
