Fix month fill on release notes PR
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -34,7 +34,7 @@ jobs:
         run: codespell
       - name: Get current month and year
         id: date
-        run: echo "month_year=$(date +'%B %Y')" >> $GITHUB_ENV
+        run: echo "month_year=$(date +'%B %Y')" >> $GITHUB_OUTPUT
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
