Update browserlist on release-notes
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -32,6 +32,8 @@ jobs:
           pip install codespell
       - name: Run codespell
         run: codespell
+      - name: Update Browserlist
+        run: npx update-browserslist-db@latest
       - name: Get current month and year
         id: date
         run: echo "month_year=$(date +'%B %Y')" >> $GITHUB_OUTPUT
