Add blog post about K3s bootstrap
Signed-off-by: manuelbuil <mbuil@suse.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -4,3 +4,9 @@ dereknola:
   image_url: https://github.com/dereknola.png
   url: https://github.com/dereknola
   name: Derek Nola
+
+manuelbuil:
+  title: K3s maintainer
+  image_url: https://github.com/manuelbuil.png
+  url: https://github.com/manuelbuil
+  name: Manuel Buil
