--- a/.codespellrc
+++ b/.codespellrc
@@ -1,4 +1,4 @@
 [codespell]
-skip = .git,./src,./node_modules,*.js,*.json,./build,./.github,yarn.lock,./scripts
+skip = .git,./src,./node_modules,*.js,*.json,./build,./.github,yarn.lock,./scripts,./blog/authors.yml
 check-filenames = true
 ignore-words-list = aks,ec2,eks,gce,gcp,ro,shouldnot,pullrequest,readd,reenable
