Add retries on dead links, increase http timeout
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
       [
         "remark-lint-no-dead-urls",
         {
+          "deadOrAliveOptions":{
+            "maxRetries": 3,
+            "timeout": 5000
+          },
           "skipUrlPatterns": [
             "^https://www\\.mysql\\.com",
             "^https://dev\\.mysql\\.com\\.*",
