--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -10,3 +10,9 @@ manuelbuil:
   image_url: https://github.com/manuelbuil.png
   url: https://github.com/manuelbuil
   name: Manuel Buil
+
+husseingalal:
+  title: K3s maintainer
+  image_url: https://github.com/galal-hussein.png
+  url: https://github.com/galal-hussein
+  name: Hussein Galal
