Update react dependencies as a group
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,6 @@ updates:
       docusaurous-dependencies:
         patterns:
           - "@docusaurus/*"
+      react-dependencies:
+        patterns:
+          - "react*"
